# amr-prediction

./: .gitignore  ARCHITECTURE_HANDOFF.md  Antibiotic-Group.md  CLI.md  CURRENT_ARCHITECTURE.md  Filtration.md  NEXT_STEPS.md  REFACTOR_HISTORY.md  SERVING.md  Team1-Bio-Complexity.md  Team1-Core.md  Workflow-Results-Notes.md  pyproject.toml  streamlit_app.py
frontend/: index.html
frontend/assets/: app.js  styles.css
notebook/: create_sample_incoming_batch.ipynb  create_training_data.ipynb  data_exploration.ipynb  export_result_figures.py  export_rule_scope_figures.ps1  export_rule_scope_figures.py  output_exploration.ipynb
outputs/all/: dataset_summary.json  metrics.csv  run_config.json  top_features.csv
outputs/broad/: dataset_summary.json  metrics.csv  top_features.csv
outputs/strict/: dataset_summary.json  metrics.csv  run_config.json  top_features.csv
outputs_rule/broad/: dataset_summary.json  metrics.csv  run_config.json
outputs_rule/strict/: dataset_summary.json  metrics.csv  run_config.json
report/: cover.tex  main.tex  references.bib
scripts/: migrate_incoming_batch_to_bronze.py  process_fasta_batch.py  run_single_fasta_pipeline.sh  run_streamlit_demo.sh  test_predict_from_incoming_batch.py
src/: amrfinder_features.py  cli.py  config.py  fasta_batch_processor.py  ingestion_service.py  modeling.py  prepared_inputs.py  rule_based.py  serving_app.py  serving_loader.py  serving_schemas.py  serving_service.py
tests/: test_amrfinder_features.py  test_fasta_batch_processor.py  test_ingestion_service.py  test_rule_based.py  test_serving_service.py
(+139 files in other folders)
