[project]
name = "amr-profiling"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "matplotlib",
    "seaborn",
    "python-dotenv",
    "tqdm"
]

[project.scripts]
amr = "cli:main"


[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets"
]
